// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bic should render 1`] = `
<div
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-earth"
      class="su-earth icon default"
    />
  </div>
  <input
    type="text"
    value=""
  />
</div>
`;

exports[`Bic should render error 1`] = `
<div
  class="input default left error"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-earth"
      class="su-earth icon default"
    />
  </div>
  <input
    type="text"
    value=""
  />
</div>
`;

exports[`Bic should render when disabled 1`] = `
<div
  class="input default left disabled"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-earth"
      class="su-earth icon default"
    />
  </div>
  <input
    disabled=""
    type="text"
    value="BBBBCCLLXXX"
  />
</div>
`;

exports[`Bic should render with placeholder 1`] = `
<div
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-earth"
      class="su-earth icon default"
    />
  </div>
  <input
    placeholder="My placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`Bic should render with value 1`] = `
<div
  class="input default left"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-earth"
      class="su-earth icon default"
    />
  </div>
  <input
    type="text"
    value="BBBBCCLLXXX"
  />
</div>
`;
